    While no longer prioritized, the FLTK toolkit is not deprecated and
    there is no schedule for its removal.

 ** The graphic object property "PickableParts" has been implemented
    which controls whether an object can accept mouse clicks.

 ** The graphic object property "Interruptible" has been fully
    implemented which controls whether a running callback function can
    be interrupted by another callback function. 

 ** Text objects now implement the properties "BackgroundColor",
    "EdgeColor", "LineStyle", "LineWidth", and "Margin".

 ** An initial implementation of alpha transparency has been made for
    patch and surface objects.  Printing to svg and pdf is supported.

 ** ishandle now returns true for both graphics handle objects and
    Java objects.  The latter change was made for Matlab compatibility.
    Use ishghandle or isgraphics if it is important not to include Java
    objects.

 ** The following statistical functions have been moved from core
    Octave to the statistics package available from Octave Forge.

    BASE
      cloglog.m
      table.m --renamed to --> crosstab.m
      logit.m
      prctile.m
      probit.m
      qqplot.m
    
    DISTRIBUTIONS
      betacdf.m
      betainv.m
      betapdf.m
      betarnd.m
      binocdf.m
      binoinv.m
      binopdf.m
      binornd.m
      cauchy_cdf.m
      cauchy_inv.m
      cauchy_pdf.m
      cauchy_rnd.m
      chi2cdf.m
      chi2inv.m
      chi2pdf.m
      chi2rnd.m
      expcdf.m
      expinv.m
      exppdf.m
      exprnd.m
      fcdf.m
      finv.m
      fpdf.m
      frnd.m
      gamcdf.m
      gaminv.m
      gampdf.m
      gamrnd.m
      geocdf.m
      geoinv.m
      geopdf.m
      geornd.m
      hygecdf.m
      hygeinv.m
      hygepdf.m
      hygernd.m
      kolmogorov_smirnov_cdf.m
      laplace_cdf.m
      laplace_inv.m
      laplace_pdf.m
      laplace_rnd.m
      logistic_cdf.m
      logistic_inv.m
      logistic_pdf.m
      logistic_rnd.m
      logncdf.m
      logninv.m