@@ -74,7 +74,10 @@ Summary of important user-visible changes for version 4.4 (yyyy-mm-dd):
 
  ** The graphic object property "Interruptible" has been fully
     implemented which controls whether a running callback function can
-    be interrupted by another callback function. 
+    be interrupted by another callback function.
+
+ ** The graphic object property "HitTest" has been updated to be fully
+    compatible with Matlab.
 
  ** Text objects now implement the properties "BackgroundColor",
     "EdgeColor", "LineStyle", "LineWidth", and "Margin".
